Responsive updates for projects timeline, get it displaying correctly on mobile.

--- a/src/assets/css/bluecollar/responsive.scss
+++ b/src/assets/css/bluecollar/responsive.scss
@@ -1,9 +1,9 @@
 /* Responsive */
 @media screen and (max-width: 40rem) {
-    h1, h2, h3, h4, h5, h6,
+    /*h1, h2, h3, h4, h5, h6,
     p {
         text-align: center;
-    }
+    }*/
 
     header .logo {
         position: relative;
